--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,59 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Electric Vehicle Charging Station Finder and Management" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <!-- Google Sign-In -->
-    <meta name="google-signin-client_id" content="%REACT_APP_GOOGLE_MAPS_API_KEY%" />
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <!-- End Google Sign-In -->
+    <meta name="theme-color" content="#0b9748" />
+    <meta
+      name="description"
+      content="EV Charging Station Network - Find and book charging stations across India"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>EV Station Finder</title>
+    <title>EV Charging Network</title>
+    <!-- Add preconnect for Firebase resources -->
+    <link rel="preconnect" href="https://firebasestorage.googleapis.com" />
+    <link rel="preconnect" href="https://firebaseauth.googleapis.com" />
+    <link rel="preconnect" href="https://identitytoolkit.googleapis.com" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!-- Add loader that will be shown if app takes too long to load -->
+    <div id="initial-loader" style="
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: #ffffff;
+      z-index: 9999;
+    ">
+      <img src="%PUBLIC_URL%/logo192.png" alt="Loading" width="80" height="80" />
+      <p style="margin-top: 20px; color: #0b9748; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+        Loading EV Charging Network...
+      </p>
+    </div>
+    <script>
+      // Remove loader once app is loaded
+      window.onload = function() {
+        var loader = document.getElementById('initial-loader');
+        if (loader) {
+          loader.style.display = 'none';
+        }
+      };
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      // Also remove loader if it's taking too long (5 seconds)
+      setTimeout(function() {
+        var loader = document.getElementById('initial-loader');
+        if (loader) {
+          loader.style.display = 'none';
+        }
+      }, 5000);
+    </script>
   </body>
 </html>
