Add charging station data and data service for fetching and filtering stations
- Introduced a new JSON file containing detailed information about various EV charging stations across multiple cities.
- Implemented a data service to handle fetching, filtering, and searching of charging station data.
- Added methods to retrieve all stations, filter by city, search by query, apply various filters, and find nearest stations based on location.

--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0b9748" />
+    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="EV Charging Station Network - Find and book charging stations across India"
+      content="EV Charging Network - Find and book charging stations across India"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Add Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Add Inter font family -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>EV Charging Network</title>
-
-    <!-- Fix recorder reference issue -->
-    <script>
-      window.recorderFixed = true; // Prevent recorder issues
-    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
